--- a/frontend/app/page.module.css
+++ b/frontend/app/page.module.css
@@ -166,3 +166,10 @@ a.secondary {
     filter: invert();
   }
 }
+
+
+.video-player {
+  position: relative;
+  padding-top: 56.25%;
+  width: 100%;
+}
