--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,27 +1,46 @@
 :root {
-  --background: #ffffff;
+  --background: #d5e5ee;
   --foreground: #171717;
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --primary: seashell;
+  --primary-heavy: #dacaca;
+
+  --secondary: #d5b185;
+  --secondary-heavy: #b89b8c;
+
+  --tertiary: #e4f9fd;
+  --tertiary-heavy: #a8cae0;
+
+  font: 16px "Monaspace Neon", monospace;
+
+  /* morphing gradient stuff */
+
+  --color-bg1: rgb(108, 0, 162);
+  --color-bg2: rgb(0, 17, 82);
+  --color1: 18, 113, 255;
+  --color2: 221, 74, 255;
+  --color3: 100, 220, 255;
+  --color4: 200, 50, 50;
+  --color5: 180, 180, 50;
+  --color-interactive: 140, 100, 255;
+  --circle-size: 80%;
+  --blending: hard-light;
 }
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 body {
   color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  background: transparent;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  font-family: "GitHub Mono", Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
 * {
@@ -35,8 +54,4 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
+/* create html animated hovering items background thing */
